# 006_Notes_Application_PostGreSQL

./: .gitignore  README.md  config.py  database.py  init_db.sql  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
static/: script.js  style.css
templates/: index.html
